--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -1,11 +1,30 @@
-"https://{default}/":
-    type: upstream
-    upstream: "varnish:http"
-    cache:
-        # As this does not support Vary, and purging, we can't use this as Sf Proxy drop in.
-        # However it is possible to enable this for anonymous traffic when backend sends expiry headers.
-        enabled: false
+.global_redirects: &global_redirects
+    /_from_test:
+        to: /_to_test
+        prefix: false
 
-"https://www.{default}/":
+.app: &app
+    type: upstream
+    upstream: app:http
+    cache:
+        enabled: false
+    ssi:
+        enabled: false
+    redirects:
+        paths:
+            <<: *global_redirects
+
+.varnish: &varnish
+    <<: *app
+    upstream: varnish:http
+    ssi:
+        enabled: true
+    redirects:
+        paths:
+            <<: *global_redirects
+
+https://www.{default}: *varnish
+
+https://{default}:
     type: redirect
-    to: "https://{default}/"
+    to: "https://www.{default}/"
