--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "require": {
         "php": "^7.1.3",
-        "contextualcode/ezplatform-content-variables": "^1.3",
+        "contextualcode/ezplatform-content-variables": "dev-master",
         "doctrine/doctrine-bundle": "^1.9.1",
         "doctrine/orm": "^2.6.3",
         "ezsystems/doctrine-dbal-schema": "^0.1@dev",
